# pinselimo.github.io

./: .gitignore  CNAME  README.md  about.md  behaviour-space.cabal  development.md  flake.nix  index.html  research.md  shell.nix  site.hs  teaching.md
contents/: about.md  bibliography.bibtex  development.md  research.md  teaching.md
docs/: about.html  blog.html  development.html  index.html  research.html  teaching.html
docs/contents/: about.html  blog.html  development.html  publications.html  research.html  teaching.html
docs/css/: lato.css  main.css
docs/fsxtactoe/: complex.html  game.html  gameNoWin.html  index.html  script.js  script_no_win.js  style.css  uncertain-four.js
docs/posts/: 2016-11-06-terratec-connect-n3-hack-part1.html  2016-11-07-terratec-connect-n3-hack-part2.html  2016-11-08-terratec-connect-n3-hack-part3.html  2019-10-07-pythons-referential-transparency-part1.html  (+7 more)
posts/: 2016-11-06-terratec-connect-n3-hack-part1.md  2016-11-07-terratec-connect-n3-hack-part2.md  2016-11-08-terratec-connect-n3-hack-part3.md  2019-10-07-pythons-referential-transparency-part1.md  2020-01-12-revealing-race-conditions.md  2020-01-13-the-functional-while.md  2020-05-04-on-narrow-roads-through-covid19.md  2021-01-30-pythons-weird-isomorphisms.md  2021-03-28-ctypes-weird-and-inconvenient-typing.md  2021-03-29-pythas-history.md  2021-03-30-pythas-beta-release.md
src/: Assets.hs  Blog.hs  Core.hs  Main.hs  Publications.hs  Site.hs
templates/: blog.html  cell-list.html  cell.html  default.html  post-list.html  post.html  publication-list.html  publications.html
(+4 files in other folders)
