name:               behaviour-space
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          Site.hs
  build-depends:    base
                  , hakyll
  ghc-options:      -threaded
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -main-is Site.main
