name:               behaviour-space
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          Main.hs
  build-depends:    base
                  , hakyll
                  , pandoc
  ghc-options:      -threaded
  other-modules:    Core
                  , Site
                  , Blog
                  , Assets
  hs-source-dirs:   src
  default-language: Haskell2010
